[package]
name = "test-parser-macros"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/tullom/test-parser"
repository = "https://github.com/tullom/test-parser"
license = "MIT"
description = "Test macros and functions for use with test-parser"
categories = ["development-tools", "development-tools::testing"]

[dependencies]
defmt = "0.3.10"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.7", features = [
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
