[package]
name = "test-parser"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/tullom/test-parser"
repository = "https://github.com/tullom/test-parser"
license = "MIT"
description = "CLI test output parser for when you can't use cargo test"
categories = ["command-line-utilities", "development-tools", "development-tools::testing"]
keywords = ["test", "parser", "cli"]

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
env_logger = "0.11"
log = "0.4"
